force-app/main/default/objects/Receivable__c/Receivable__c.object-meta.xml
<CustomObject>
    <label>Receivable</label>
    <nameField>
        <label>Receivable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receivables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>