force-app/main/default/objects/Receivable__c/fields/Intrest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Intrest_Amount__c</fullName>
    <label>Intrest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>