force-app/main/default/objects/Receivable__c/fields/Intrest_Amount_In_Text__c.field-meta.xml
<CustomField>
    <fullName>Intrest_Amount_In_Text__c</fullName>
    <label>Intrest Amount In Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>