force-app/main/default/objects/Receivable__c/fields/Principal_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Principal_Outstanding__c</fullName>
    <label>Principal Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>