force-app/main/default/objects/Receivable__c/fields/Receivable_Date__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Date__c</fullName>
    <label>Receivable Date</label>
    <type>Date</type>
</CustomField>