force-app/main/default/objects/Receivable__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>