force-app/main/default/objects/Receivable__c/recordTypes/LAP_Receivable.recordType-meta.xml
<RecordType>
    <fullName>LAP_Receivable</fullName>
    <active>true</active>
    <label>LAP Receivable</label>
</RecordType>