force-app/main/default/objects/Receivable__c/recordTypes/Repayment_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Repayment_Schedule</fullName>
    <active>true</active>
    <label>Repayment Schedule</label>
</RecordType>